// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-filter-field Renders \`c-filter-field\` with custom props 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          autocomplete="off"
          name="customName"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--clear"
          >
            <button
              aria-label="Clear Custom label"
              class="v-icon notranslate v-icon--link material-icons theme--light"
              tabindex="-1"
              type="button"
            >
              clear
            </button>
          </div>
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="id1"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with custom props 2`] = `undefined`;

exports[`c-filter-field Renders \`c-filter-field\` with default props 1`] = `
<div
  class="v-input v-input--hide-details theme--light v-text-field v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Filters
        </label>
        <input
          autocomplete="off"
          name="filter"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="filter"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with default props 2`] = `undefined`;

exports[`c-filter-field Renders \`c-filter-field\` with old_entity_patterns 1`] = `
<div
  class="v-input v-input--hide-details theme--light v-text-field v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          autocomplete="off"
          name="customName"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`c-filter-field Renders \`c-filter-field\` with old_entity_patterns 2`] = `undefined`;
